--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,14 @@ jobs:
         run: yarn install --immutable
 
       # 5. Yarn PnP 환경에서 빌드 실행
-      - name: Build project & deploy
+      - name: Build project
         run: |
           yarn build
-          yarn deploy
+          
+      # 6. GitHub Pages로 배포
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN  }}
+          publish_dir: ./dist  # Vite 빌드 출력 디렉토리
 
