chore: update ESLint ignores and refine Prettier and ESLint scripts to target 'src' directory

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "prettier": "prettier --write .",
-    "prettier:check": "prettier --check .",
-    "lint": "eslint .",
+    "prettier": "prettier --write src",
+    "prettier:check": "prettier --check src",
+    "lint": "eslint src",
     "tsc": "tsc",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
