--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ yarn-error.log*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
+!.yarnrc.yml
 !.yarn/sdks
 !.yarn/versions
 
@@ -29,7 +30,6 @@ dist/
 *.swo
 *~
 .idea/
-.vscode/
 *.code-workspace
 
 # MacOS and Linux specific files
