--- a/package.json
+++ b/package.json
@@ -6,19 +6,21 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "prettier": "prettier --write .",
-    "prettier:check": "prettier --check .",
-    "lint": "eslint .",
+    "prettier": "prettier --write src",
+    "prettier:check": "prettier --check src",
+    "lint": "eslint src",
     "tsc": "tsc",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "d3": "^7.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/d3": "^7.4.3",
     "@types/gh-pages": "^6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
